--- a/angularGyak38/src/app/home/home.component.html
+++ b/angularGyak38/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="conatiner mt-5">
+<div class="container mt-5">
     <h3 class="display-3">{{ SayHiMessage }}</h3>
     <h4 class="text-center mt-5">{{ TaskMessage }}</h4>
     <h5 class="text-center">{{Author}}</h5>
